add docker-compose database for convenience

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://user:password@localhost:5432/livepoll"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/livepoll"
